--- a/style.css
+++ b/style.css
@@ -5,20 +5,21 @@
 }
 .banner{
     background-color:rgba(229, 84, 115, 0.10);
-    padding: 30px 240px 0px 240px;
+    padding: 50px 200px 0px 200px;
     display: flex;
     align-items: center;
     justify-content: space-between;
 
 }
 .banner-content{
-    max-width: 600px;
+    max-width: 700px;
     margin-bottom: 50px;
 }
 
 .img{
-    transform: rotateY(180deg);
-   
+    width: 400px;
+    height: 500px;
+    
 }
 .banner-title{
     color: #272727;
@@ -40,4 +41,182 @@
 .banner-info{
     color: rgba(39, 39, 39, 0.60);
     font-weight: 400;
+}
+.feature-title{
+    color: #272727;
+    text-align: center;
+    font-size: 30px;
+    font-weight: 800;
+    margin-bottom: 10px;
+}
+.feature-description{
+    color: rgba(39, 39, 39, 0.60);
+    text-align: center;
+    font-size: 10px;
+    font-weight: 400;
+    line-height: 30px;
+    max-width: 350px;
+    margin: auto;
+}
+.feature-container{
+    display: flex;
+    gap: 20px;
+    margin-right: auto;
+    margin-left: auto;
+    text-align: center;
+    text-decoration: underline;
+}
+.pink{
+    width: 464px;
+    height: 538px;
+    border-radius: 300px 300px 0px 0px;
+    background: rgba(167, 33, 98, 0.15);
+    display: flex;
+    justify-content: center;
+    align-items: end;
+}
+.red{
+    width: 464px;
+    height: 538px;
+    border-radius: 300px 300px 0px 0px;
+    background: rgba(5, 151, 160, 0.15);
+    display: flex;
+    justify-content: center;
+    align-items: end;
+}
+.yellow{
+    width: 464px;
+    height: 538px;
+    border-radius: 300px 300px 0px 0px;
+    background: rgba(71, 125, 17, 0.15);
+    display: flex;
+    justify-content: center;
+    align-items: end;
+}
+.blogs{
+    display: flex;
+    justify-content: space-between;
+    width: 500px;
+    align-content: center;
+    margin: 0px 250px;
+}
+.blog{
+    border-radius: 300px 300px 0px 0px;
+    background: rgba(167, 33, 98, 0.15);
+}
+
+.blog-description{
+    color: #272727;
+    background-color: white;
+    text-align: center;
+    font-size: 24px;
+    font-weight: 700;
+    line-height: 35px;
+    text-decoration-line: underline;
+}
+.box-1{
+    border-radius: 300px 300px 0px 0px;
+    background: rgba(167, 33, 98, 0.15);
+}
+
+.box-2{
+    border-radius: 300px 300px 0px 0px;
+    background: rgba(5, 151, 160, 0.15);
+}
+.box-3{
+    border-radius: 300px 300px 0px 0px;
+    background: rgba(71, 125, 17, 0.15);
+}
+.middle{
+    height: 500px;
+    margin-top: 100px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    border-radius: 8px;
+    background: rgba(229, 84, 115, 0.05);
+    padding: 200px;
+    margin-bottom: 100px;
+}
+.middle-title{
+    text-align: center;
+    color: #272727;
+    font-size: 40px;
+    font-weight: 800;
+    margin-bottom: 20px;
+}
+.middle-description{
+    color: rgba(39, 39, 39, 0.60);
+    text-align: center;
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 30px;
+    margin-bottom: 20px;
+}
+#btn{
+   text-align: center;
+}
+.deals{
+    background-image: url('../flower-shop-assignment/Flower Asset/Rectangle9.png');
+    background-repeat: no-repeat;
+    margin: 100px 0px;
+    background-color: #E55473;
+}
+
+.latest{
+    color: #272727;
+    text-align: center;
+    font-size: 40px;
+    font-weight: 800;
+    padding-top: 20px;
+}
+.coupon{
+    color: rgba(39, 39, 39, 0.60);
+    text-align: center;
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 30px;
+}
+.email{
+   text-align: center;
+   padding-bottom: 100px;
+}
+   #email{
+    width: 700px;
+    height: 64px;
+}
+.off{
+    color: #E55473;
+}
+.footer{
+    height: 350px;
+    background-color:#111010;;
+    text-align: center;
+}
+.footer-title{
+    color: #E55473;
+    font-size: 48px;
+    font-weight: 800;
+    padding-top: 100px;
+}
+.shop{
+    color:white;
+}
+.footer-description{
+    color: rgba(255, 255, 255, 0.90);
+    text-align: center;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 30px;
+    margin-top: 24px;
+    margin-bottom: 32px;
+}
+.small{
+    color: rgba(255, 255, 255, 0.40);
+    text-align: center;
+    font-family: Lato;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
 }
