--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 }
 .banner{
     background-color:rgba(229, 84, 115, 0.10);
-    padding: 50px 200px 0px 200px;
+    padding: 30px 200px 0px 200px;
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -17,9 +17,7 @@
 }
 
 .img{
-    width: 400px;
-    height: 500px;
-    
+    width: 100%;
 }
 .banner-title{
     color: #272727;
@@ -40,6 +38,7 @@
 .banner-info{
     color: rgba(39, 39, 39, 0.60);
     font-weight: 400;
+    margin-bottom: 20px;
 }
 .feature{
     margin-top: 100px;
@@ -247,4 +246,28 @@
     font-style: normal;
     font-weight: 400;
     line-height: normal;
+}
+.instagram{
+    margin: 100px auto 100px;
+    max-width: 1260px;
+}
+.instagram-section{
+    text-align: center;
+}
+.insta-title{
+    font-size: 25px;
+    font-weight: 800px;
+    margin-bottom: 15px;
+}
+.insta-description{
+    color: rgba(39, 39, 39, 0.60);
+    font-size: 13px;
+    font-weight: 400;
+    max-width: 450px;
+    margin: auto;
+}
+.insta-photo-group{
+    display: flex;
+    gap: 20px;
+    margin-top: 30px;
 }
