--- a/style.css
+++ b/style.css
@@ -275,3 +275,38 @@
     gap: 20px;
     margin-top: 30px;
 }
+.expensive{
+    background-color:rgba(229, 84, 115, 0.10);
+    text-align: center;
+    padding: 100px 0 100px;
+    margin-bottom: 100px;
+}
+.flowers-title{
+    font-size: 30px;
+    font-weight: 800px;
+    margin-bottom: 15px;
+}
+.expensive-title{
+    margin-bottom: 30px;
+}
+.flowers-description{
+    color: rgba(39, 39, 39, 0.60);
+    font-size: 10px;
+    font-weight: 400;
+    max-width: 450px;
+    margin: auto;
+}
+.expensive-flex{
+    max-width: 1260px;
+    display: flex;
+    margin-right: auto;
+    margin-left: auto;
+    gap: 15px;
+
+}
+.rose{
+    height: 300px;
+    width: 300px;
+    border-radius: 300px;
+    overflow: hidden;
+}
