--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    margin-bottom: 0px;
 
 }
 .banner-content{
@@ -17,6 +18,8 @@
 }
 .banner-img{
     width: 45%;
+    padding: 0px;
+    margin: 0px;
 
 }
 .img{
@@ -24,7 +27,7 @@
 }
 .banner-title{
     color: #272727;
-    font-size: 30px;
+    font-size: 40px;
     font-weight: 800;
     margin-bottom: 20px;
 }
